2012-11-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Mihai Hagianu (patch #3496094): add ATxmega128A3
	Contributed by Chris Thunes (patch #3497114): add ATxmega32A4
	* src/devdescr.cc (ATxmega32A4, ATxmega128A3): new entries
	* doc/avarice.1: Document new devices.

2012-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: In AC_LINK_IFELSE, use AC_LANG_SOURCE for the
	source code to be compiled, in order to silence a warning.
	Bump version to svn20121102.

2012-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Deprecate target ELF file programming (downloading).
	* configure.ac: Implement the --enable-target-programming
	configuration option; disabled by default.  No longer require
	the presence and usability of libbfd if not configured for
	the target programming feature.
	* src/main.cc: Disable --file, --program, and --verify
	unless ENABLE_TARGET_PROGRAMMING is in effect.
	* src/jtag2prog.cc: Turn the downloadTarget method into a
	dummy unless ENABLE_TARGET_PROGRAMMING is in effect; remove
	all dependencies from bfd.h / libbfd otherwise.
	* src/jtagprog.cc: (Dito.)
	* doc/avarice.1: Document that --file, --program, and --verify
	are deprecated, and no longer enabled by default

2012-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/devdescr.xsl: update for recent changes of src/jtag.h:
	generate fuses, and an empty Xmega device descriptor

2012-11-02  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: Added megaM1 and megaC1 device: ATmega16M1,
	ATmega64M1, ATmega64C1
	* doc/avarice.1: Document new devices.

2012-07-31  Canyon Bliss  <canyon@recursivebliss.com>

	* doc/avarice.1: Updated list of devices.
	* src/devdescr.cc: Added xmegaB devices: ATxmega128B1, ATxmega128B3, 
	ATxmega64B1, ATxmega64B3.

2012-01-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Add a test whether libbfd requires libdl; fix
	the broken (always positive) test for libz as well.

2011-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
